// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineQuote nested in German renders correctly 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<p>
  Luke führte weiter aus,
   
  <q
    class="c0"
    lang="de"
  >
    Und sie nannte ihn einen
     
    <q
      class="c0"
      lang="en"
    >
      total blöd-aussehenen Idioten!
    </q>
     Ich denke ich habe eine Chance!
  </q>
   
  Dieser arme Idiot …
</p>
`;

exports[`InlineQuote nested in Japanese renders correctly 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<p>
  彼女は
  <q
    class="c0"
    lang="ja"
  >
    日本語に猫は
    <q
      class="c0"
      lang="en"
    >
      にゃん
    </q>
    と鳴く
  </q>
  と言った。
</p>
`;

exports[`InlineQuote nested renders correctly 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<p>
  Luke continued,
   
  <q
    class="c0"
    lang="en"
  >
    And then she called him a
     
    <q
      class="c0"
      lang="en"
    >
      scruffy-looking nerf-herder!
    </q>
     I think I’ve got a chance!
  </q>
   
  The poor naive fool …
</p>
`;

exports[`InlineQuote renders correctly 1`] = `
.c0 {
  font-style: italic;
}

.c0[lang|='ja'] {
  font-style: normal;
}

.c0::before {
  font-style: normal;
  margin-right: 0.1em;
}

.c0::after {
  font-style: normal;
  margin-left: 0.1em;
}

<p>
  Peter said
   
  <q
    class="c0"
    lang="en"
  >
    She has to hand this over immediatly
  </q>
   
  and was quite angry.
</p>
`;
